--- a/requirements.txt
+++ b/requirements.txt
@@ -4,3 +4,10 @@ psycopg2-binary==2.8.6
 pytz==2020.1
 sqlparse==0.3.1
 django-crispy-forms==1.9.2
+
+whitenoise==5.2.0
+python-decouple==3.3
+gunicorn==20.0.4
+django-heroku==0.3.1
+psycopg2==2.8.6
+dj-database-url==0.5.0
